# keytweak

./: .gitignore  BEFORE_AND_AFTER.md  CMakeLists.txt  GUI_IMPROVEMENTS.md  QUICKSTART.md  README.md  START_HERE.md  TRANSFORMATION_SUMMARY.md  UI_LAYOUT.md  build.ps1
include/keytweak/: app.h  catalog.h  layout.h  remap.h  types.h
src/: key_catalog.c  layout_win32.c  main.c  remap.c
